--- a/entrypoints/options/index.html
+++ b/entrypoints/options/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>学マス - 插件设置</title>
+  <title>插件设置</title>
   <style>
     body {
       margin: 0;
